2010-10-18  Murray Cumming  <murrayc@murrayc.com>

	Added ComboBox::set_popup_fixed_width() and RadioButton::join_group().

	* gdk/src/gdk_methods.defs:
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/combobox.hg: Added get/set_popup_fixed_width().
	* gtk/src/radiobutton.hg: Added join_group().
	* tools/m4/convert_gtk.m4: Added a RadioButton conversion.

2010-10-17  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with latest GTK+.

	* gtk/gtkmm/comboboxtext.cc: Comment out (wrong anyway) use of
	deprecated gtk_combo_box_insert_text().
	* gtk/src/combobox.[hg|ccg]: get_entry_text(): Reimplement without using
	the deprecated gtk_combo_box_get_active_text().
	* gtk/src/main.[hg|ccg]: Remove signal_run() and signal_quit() because they
	used the deprecated gtk_init_add(), gtk_quit_add_full() and g
	gtk_quit_remove() functions.

2010-10-15  Murray Cumming  <murrayc@murrayc.com>

	Depend on latest glibmm version.

	* configure.ac: We need glibmm 2.27.0 for Gio::Application.

2010-10-14  Murray Cumming  <murrayc@murrayc.com>

	ComboBox: Added set_entry_text_column(TreeModelColumnBase)

	* gtk/src/combobox.hg: Added set_entry_text_column(TreeModelColumnBase) to
  match the old GtkComboBoxEntry::set_text_column(TreeModelColumnBase).

2010-10-14  Murray Cumming  <murrayc@murrayc.com>

	ComboBox: Added get_entry() and get_entry_text().

	* gtk/src/combobox.[hg|ccg]: Added our custom get_entry() method that was
  previously in ComboBoxEntry. It avoids the need to call get_child() and
  dynamic_cast<>. Added get_entry_text(), wrappping get_active_text(), which
  was previously only in ComboBoxEntry.

2010-10-14  Murray Cumming  <murrayc@murrayc.com>

	Move resize_grip methods from Statusbar to Window.

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/statusbar.hg: Remove get/set_has_resize_grip().
	* gtk/src/window.hg: Added get/set_has_resize_grip(),
  get_resize_grip_is_visible(), get_resize_grip_area().
