@@ -8,7 +8,6 @@ gtkmm_files_extra_cc =			\
 	accelkey.cc			\
 	accelmap.cc			\
 	cellrenderer_generation.cc	\
-	comboboxtext.cc			\
 	listviewtext.cc			\
 	object.cc \
 	radiobuttongroup.cc		\
@@ -25,7 +24,6 @@ gtkmm_files_extra_h =			\
 	base.h				\
 	border.h			\
 	cellrenderer_generation.h	\
-	comboboxtext.h			\
 	listviewtext.h			\
 	object.h \
 	radiobuttongroup.h		\
