@@ -52,6 +52,7 @@ gtkmm_files_any_hg =		\
 	colorbutton.hg		\
 	colorselection.hg	\
 	combobox.hg	\
+	comboboxtext.hg	\
 	container.hg		\
 	dialog.hg		\
 	drawingarea.hg		\
