@@ -1,5 +1,16 @@
 2010-10-18  Murray Cumming  <murrayc@murrayc.com>
 
+	ComboBoxText: Re-implemented with GtkComboBoxText.
+
+	* gtk/gtkmm/comboboxtext.[h|cc]: Removed, replacing with:
+  * gtk/src/comboboxtext.[hg|ccg], wrapping the new GtkComboBoxText class.
+  As a bonus this means that insert_text() will now work, and we can now
+  define this widget and its data items in Glade.
+  * gtk/gtkmm.h: Do not include the removed
+  comboboxentry.h and comboboxentrytext.h headers.
+
+2010-10-18  Murray Cumming  <murrayc@murrayc.com>
+
 	Added ComboBox::set_popup_fixed_width() and RadioButton::join_group().
 
 	* gdk/src/gdk_methods.defs:
